--- a/src/app/components/order-mgmt/product-panel/product-panel.component.html
+++ b/src/app/components/order-mgmt/product-panel/product-panel.component.html
@@ -1,23 +1,23 @@
 <!-- Back button. -->
 <div class="row mx-5 my-3">
-	<a class="btn btn-outline-secondary" [routerLink]="['/client/order-details', client_nick ]">&larr; Back</a>
+	<a class="btn btn-outline-secondary" [routerLink]="['/client/order-details', clientNick ]">&larr; Back</a>
 </div>
 
 <!-- Status alerts. -->
 <div class="container mt-3">
 	<!-- Notification for success because ngAlerts are not working.-->
-	<div class="alert alert-success" role="alert" *ngIf="is_success">
-		{{succ_msg}}
+	<div class="alert alert-success" role="alert" *ngIf="isSuccess">
+		{{successMsg}}
 	</div>
 	<!-- Notification for errors because ngAlerts are not working.-->
-	<div class="alert alert-danger" role="alert" *ngIf="has_error">
-		{{error_msg}}
+	<div class="alert alert-danger" role="alert" *ngIf="hasError">
+		{{errorMsg}}
 	</div>
 </div>
 <div class="container-fluid">
 	<div class="px-4 py-4 row">
 		<div class="col-md-8">
-			<h3 class="mb-4">Add/Remove products from {{client_nick}}'s order, {{tracking_number}}.</h3>
+			<h3 class="mb-4">Add/Remove products from {{clientNick}}'s order, {{trackingNumber}}.</h3>
 			<!-- Product table. -->
 			<div class="table-responsive">
 			<table class="table table-striped">
@@ -40,7 +40,7 @@
 						<td>${{ product.price }}</td>
 						<td>{{ product.order_date }}</td>
 						<td>{{ product.quantity }}</td>
-						<td><button (click)="deleteProductConfirmed(product.name_, tracking_number)"
+						<td><button (click)="deleteProductConfirmed(product.name_, trackingNumber)"
 								class="btn btn-danger btn-sm">Delete</button></td>
 					</tr>
 				</tbody>
@@ -50,23 +50,23 @@
 		<div class="col-md-3 pt-5 mx-5">
 			<div class="form-group">
 				<label for="prod_name">Product Name*</label>
-				<input type="text" class="form-control" id="prod_name" required [(ngModel)]="new_product.name_"
+				<input type="text" class="form-control" id="prod_name" required [(ngModel)]="newProduct.name_"
 					name="prod_name" />
 			</div>
 			<div class="form-group">
 				<label for="hlink">Product Link</label>
-				<input type="text" class="form-control" id="hlink" required [(ngModel)]="new_product.hyperlink"
+				<input type="text" class="form-control" id="hlink" required [(ngModel)]="newProduct.hyperlink"
 					name="hlink" />
 			</div>
 			<div class="form-group">
 				<label for="prod_price">Product Price* (Dollars)</label>
-				<input type="text" class="form-control" id="prod_price" required [(ngModel)]="new_product.price"
+				<input type="text" class="form-control" id="prod_price" required [(ngModel)]="newProduct.price"
 					name="prod_price" />
 			</div>
 			<div class="form-group">
 				<label for="sp">Order Date:*</label>
 				<div class="input-group">
-					<input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="datepicker_out"
+					<input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="datePickerOut"
 						ngbDatepicker #d="ngbDatepicker">
 					<div class="input-group-append">
 						<button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
@@ -76,7 +76,7 @@
 			</div>
 			<div class="form-group">
 				<label for="prod_quan">Quantity*</label>
-				<input type="text" class="form-control" id="prod_quan" required [(ngModel)]="new_product.quantity"
+				<input type="text" class="form-control" id="prod_quan" required [(ngModel)]="newProduct.quantity"
 					name="prod_quan" (keyup.enter)="insertProduct()" />
 			</div>
 
